ci/resources/covid-data-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: covid-data-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "*.sg-cna.cf"
      http:
        paths:
        - path: /api/v1/reports.*
          backend:
            serviceName: cna-covid-data
            servicePort: 80
    - http:
        paths:
        - path: /api/v1/reports.*
          backend:
            serviceName: cna-covid-data
            servicePort: 80
